roozbeh-tv-show-project

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TV Show Project | My Name (My GitHub username)</title>
+    <title>TV Show Project | Roozbeh (Roozbehshokri1990)</title>
     <link href="style.css" rel="stylesheet" />
+    
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
-
-  <body>
-    <div id="root">
+<div>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <input type="text" placeholder="Search.." id="search-input">
     </div>
-
-    <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
+    <div id="root">
+      <div class="container"></div>
+<!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
