roozbeh-tv-show-project-350

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
       <input type="text" placeholder="Search.." id="search-input">
+      <select name="" id="select-input"></select>
     </div>
     <div id="root">
       <div class="container"></div>
@@ -24,3 +25,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
