new-select-for-400

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <a href="#contact">Contact</a>
       <input type="text" placeholder="Search.." id="search-input">
       <select name="" id="select-input"></select>
+      <select name="" id="select-input1"></select>
     </div>
     <div id="root">
       <div class="container"></div>
 <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
-
+    <script src="shows.js"></script>
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
   </body>
